Added basic password security scheme using SHA256 hashing

--- a/templates/room.html
+++ b/templates/room.html
@@ -11,8 +11,8 @@
 		<link rel="stylesheet" type="text/css" href="/client/css/room.css"></link>
 		<title id="page_title">{{ room_name }} | Chatroom</title>
 		
-		<meta name="room_id" content="{{ room_id }}">
-		<meta name="nickname" content="{{ nickname }}">
+		<meta name="room_id" content="{{ room_id }}"/>
+		<meta name="nickname" content="{{ nickname }}"/>
 		
 		<script src="/socket.io/socket.io.js"></script>
 		<script type="text/javascript">
