Signup, signin, signout are now functional

--- a/templates/room.html
+++ b/templates/room.html
@@ -25,7 +25,7 @@
 				<a id="chatroom_brand" class="brand" href="/">CHATROOM</a>
 				<ul class="nav">
 					<li id="rooms_menu" class="menu_item"><a href="/index">Rooms</a></li>
-					<li id="nickname_menu" class="menu_item"><a href="/signin">Create new nickname</a></li>
+					<li id="signout_menu" class="menu_item"><a href="/signout">Sign out</a></li>
 				</ul>
 			</div>
 		</div>
