--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,14 +2,14 @@
 <html>
 	<head>
 		<script type="text/javascript" src="http://code.jquery.com/jquery.js" charset="utf-8"></script>
-		<script type="text/javascript" src="/client/js/signin.js" charset="utf-8"></script>
+		<script type="text/javascript" src="/client/js/signup.js" charset="utf-8"></script>
 		<script type="text/javascript" src="/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
 		<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha256.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Marmelad' rel='stylesheet' type='text/css'></link>
 		<link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/base.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/signin.css"></link>
-		<title id="page_title">Sign-in | Chatroom</title>
+		<title id="page_title">Sign-up | Chatroom</title>
 		
 		<meta name="server_salt" content="{{ server_salt }}"/>
 	</head>
@@ -21,11 +21,12 @@
 		</div>
 		<div id="body_content">
 			<h2>Welcome to Chatroom!</h2>
-			<div id="signin_wrapper">
-				<form id="signin_form" class="form-inline">
+			<div id="signup_wrapper">
+				<form id="signup_form" class="form-inline">
 					<input id="username" type="text" placeholder="Username"/>
 					<input id="password" type="password" placeholder="Password"/>
-					<input id="submit_signin" class="btn btn-primary" type="submit" value="Sign in"></input>
+					<input id="access_code" type="text" placeholder="Access code"/>
+					<input id="submit_signup" class="btn btn-primary" type="submit" value="Sign up"></input>
 				</form>
 			</div>
 		</div>
