Template, JS, and backend support for adding tasks

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -26,7 +26,7 @@
 					<input id="username" type="text" placeholder="Username"/>
 					<input id="password" type="password" placeholder="Password"/>
 					<input id="access_code" type="text" placeholder="Access code"/>
-					<input id="submit_signup" class="btn btn-primary" type="submit" value="Sign up"></input>
+					<button id="submit_signup" class="btn btn-primary" type="submit">Sign up</button>
 				</form>
 			</div>
 		</div>
