--- a/templates/signin.html
+++ b/templates/signin.html
@@ -25,7 +25,7 @@
 				<form id="signin_form" class="form-inline">
 					<input id="username" type="text" placeholder="Username"/>
 					<input id="password" type="password" placeholder="Password"/>
-					<input id="submit_signin" class="btn btn-primary" type="submit" value="Sign in"></input>
+					<button id="submit_signin" class="btn btn-primary" type="submit">Sign in</button>
 				</form>
 			</div>
 		</div>
