--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="/client/css/room.css"></link>
 		<title id="page_title">Add directive | Chatroom</title>
 		
-		<meta name="room_id" content="{{ room_id }}"/>
+		<meta name="room_id" content="<%- @room_id %>"/>
 	</head>
 	<body>
 		<div id="menu_bar" class="navbar navbar-static-top navbar-inverse">
