--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="/client/css/signin.css"></link>
 		<title id="page_title">Sign-up | Chatroom</title>
 		
-		<meta name="server_salt" content="{{ server_salt }}"/>
+		<meta name="server_salt" content="<%- @server_salt %>"/>
 	</head>
 	<body>
 		<div id="menu_bar" class="navbar navbar-static-top navbar-inverse">
