--- a/templates/index.html
+++ b/templates/index.html
@@ -11,15 +11,7 @@
 		<title id="page_title">Rooms | Chatroom</title>
 	</head>
 	<body>
-		<div id="menu_bar" class="navbar navbar-static-top navbar-inverse">
-			<div class="navbar-inner">
-				<a id="chatroom_brand" class="brand" href="/">CHATROOM</a>
-				<ul class="nav">
-					<li id="rooms_menu" class="menu_item"><a href="/index">Rooms</a></li>
-					<li id="signout_menu" class="menu_item"><a href="/signout">Sign out</a></li>
-				</ul>
-			</div>
-		</div>
+		<% include "navbar.html" %>
 		<div id="body_content">
 			<h2>Rooms Index</h2>
 			<div id="new_room_box">
