--- a/templates/room_producer.html
+++ b/templates/room_producer.html
@@ -22,15 +22,7 @@
 		</script>
 	</head>
 	<body>
-		<div id="menu_bar" class="navbar navbar-static-top navbar-inverse">
-			<div class="navbar-inner">
-				<a id="chatroom_brand" class="brand" href="/">CHATROOM</a>
-				<ul class="nav">
-					<li id="rooms_menu" class="menu_item"><a href="/index">Rooms</a></li>
-					<li id="signout_menu" class="menu_item"><a href="/signout">Sign out</a></li>
-				</ul>
-			</div>
-		</div>
+		<% include "navbar.html" %>
 		<div id="body_content">
 			<h2><%= @room_name %></h2>
 			<div id="task_content">
@@ -45,28 +37,33 @@
 						<% end %>
 					</div>
 				</div>
-				<a href="/add_task/{{ room_id }}" id="add_task" class="btn btn-primary" type="submit">Add a new directive</a>
+				<a href="/add_task/<%- @room_id %>" id="add_task" class="btn btn-primary" type="submit">Add a new directive</a>
 			</div>
 			<div id="messaging_content">
 				<div id="messages">
 					<% for message in @message_list : %>
 						<div class="message" data-id="<%- message.id %>" data-msg-time="<%- message.time %>">
 							<strong><%= message.author %>: (<span class="msg_timeago"></span>)</strong>
-							<p>In reply to message </p>
+							<% if message.reply >= 0 : %>
+								<p>In reply to message <%- message.reply %></p>
+							<% end %>
 							<p><%= message.content %></p>
 						</div>
 					<% end %>
 				</div>
 				<form id="add_message_form"  class="form-inline">
-					<input id="input_message" type="text" placeholder="Hi, <%- @username %>! Say something…" data-reply-to="" data-whisper-to=""/>
+					<div class="input-group">
+						<span class="input-group-addon">Reply to</span>
+						<input id="input_message" type="text" class="form-control" placeholder="Hi, <%- @username %>! Say something…" data-reply-to="" data-whisper-to="">
+					</div>
 					<button id="send_message" class="btn btn-primary" type="submit">Send</button>
 				</form>
 			</div>
-			<div id="sidebar">
-				<div id="sidebar_content">
-					<h4>Chatters</h4>
-					<div id="members">
-					</div>
+		</div>
+		<div id="sidebar">
+			<div id="sidebar_content">
+				<h4>Chatters</h4>
+				<div id="members">
 				</div>
 			</div>
 		</div>
