Many changes. Ultimately, pretty much just restoring functionality broken by major version updates in dependencies like Express and Socket.io.

--- a/client/css/room.css
+++ b/client/css/room.css
@@ -77,6 +77,20 @@
 	border-radius: 10px;
 }
 
+.task_detail_priority {
+	color: red;
+	display: inline-block;
+}
+
+span.glyphicon {
+	color: red;
+}
+
+.task_title {
+	font-weight: bold;
+	cursor: pointer;
+}
+
 .message {
 	color: #000E5E;
 }
