--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/base.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/index.css"></link>
-		<title id="page_title">Rooms | Chatroom</title>
+		<title id="page_title">Rooms | Crisis Flow</title>
 	</head>
 	<body>
 		<% include "navbar.html" %>
