--- a/templates/room_consumer.html
+++ b/templates/room_consumer.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/base.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/room.css"></link>
-		<title id="page_title">{{ room_name }} | Chatroom</title>
+		<title id="page_title">{{ room_name }} | Crisis Flow</title>
 		
 		<meta name="room_id" content="{{ room_id }}"/>
 		<meta name="nickname" content="{{ nickname }}"/>
