--- a/templates/signin.html
+++ b/templates/signin.html
@@ -9,14 +9,14 @@
 		<link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/base.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/signin.css"></link>
-		<title id="page_title">Sign-in | Chatroom</title>
+		<title id="page_title">Sign-in | Crisis Flow</title>
 		
 		<meta name="server_salt" content="<%- @server_salt %>"/>
 	</head>
 	<body>
 		<% include "navbar_signin.html" %>
 		<div id="body_content">
-			<h2>Welcome to Chatroom!</h2>
+			<h2>Welcome to Crisis Flow!</h2>
 			<div id="signin_wrapper">
 				<form id="signin_form" class="form-inline">
 					<input id="username" type="text" placeholder="Username"/>
