--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/base.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/room.css"></link>
-		<title id="page_title">Add directive | Chatroom</title>
+		<title id="page_title">Add directive | Crisis Flow</title>
 		
 		<meta name="room_id" content="<%- @room_id %>"/>
 	</head>
