--- a/templates/navbar_signin.html
+++ b/templates/navbar_signin.html
@@ -1,7 +1,7 @@
 <nav id="menu_bar" class="navbar navbar-inverse navbar-static-top" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a id="chatroom_brand" class="navbar-brand" href="/">CHATROOM</a>
+			<a id="chatroom_brand" class="navbar-brand" href="/">CRISIS FLOW</a>
 			<ul class="nav navbar-nav">
 			</ul>
 		</div>
