--- a/templates/room.html
+++ b/templates/room.html
@@ -3,16 +3,17 @@
 	<head>
 		<script type="text/javascript" src="http://code.jquery.com/jquery.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js" charset="utf-8"></script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.6.0/moment.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="/client/js/room.js" charset="utf-8"></script>
 		<script type="text/javascript" src="/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
 		<link href='http://fonts.googleapis.com/css?family=Marmelad' rel='stylesheet' type='text/css'></link>
 		<link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/base.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/room.css"></link>
-		<title id="page_title">{{ room_name }} | Chatroom</title>
+		<title id="page_title"><%= @room_name %> | Chatroom</title>
 		
-		<meta name="room_id" content="{{ room_id }}"/>
-		<meta name="nickname" content="{{ nickname }}"/>
+		<meta name="room_id" content="<%- @room_id %>"/>
+		<meta name="username" content="<%- @username %>"/>
 		
 		<script src="/socket.io/socket.io.js"></script>
 		<script type="text/javascript">
@@ -20,36 +21,77 @@
 		</script>
 	</head>
 	<body>
-		<div id="menu_bar" class="navbar navbar-static-top navbar-inverse">
-			<div class="navbar-inner">
-				<a id="chatroom_brand" class="brand" href="/">CHATROOM</a>
-				<ul class="nav">
-					<li id="rooms_menu" class="menu_item"><a href="/index">Rooms</a></li>
-					<li id="signout_menu" class="menu_item"><a href="/signout">Sign out</a></li>
-				</ul>
-			</div>
-		</div>
-		<div id="body_content">
-			<div id="messaging_content">
-				<h2>{{ room_name }}</h2>
-				<div id="messages">
-					{{#message_list}}
-						<div class="message" data-msg-time="{{ msg_time }}">
-							<strong>{{ msg_poster }}:</strong>
-							<p>{{ msg_text }}</p>
+		<% for task in @task_list : %>
+			<!-- modal dialog containing task details (starts hidden) -->
+			<div id="task_<%- task.id %>_detail" class="task_detail modal fade" role="dialog" aria-hidden="true" 
+			data-task-id="<%- task.id %>" data-task-time="<%- task.time %>" data-task-high-priority="<%- task.high_priority %>" 
+			data-task-content="<%= task.content %>">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h3 class="modal-title"><%= task.title %></h3>
+							<% if task.high_priority : %>
+								<span class="glyphicon glyphicon-exclamation-sign"></span>
+								<h4 class="task_detail_priority">High Priority</h4>
+							<% end %>
+							<p class="task_detail_profile">Submitted by <%= task.author %> (<span class="task_time"></span>)</p>
 						</div>
-					{{/message_list}}
+						<div class="modal-body">
+							<p><%= task.content %></p>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="task_completed btn btn-primary" data-dismiss="modal"
+							data-task-id="<%- task.id %>">Mark as completed</button>
+							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		<% end %>
+		<% include "navbar.html" %>
+		<div id="body_content">
+			<h2><%= @room_name %></h2>
+			<div id="task_content">
+				<div id="tasks">
+					<div id="task_wrapper">
+						<% for task in @task_list : %>
+							<!-- task entry in task queue -->
+							<div id="task_<%- task.id %>" class="task" data-task-id="<%- task.id %>" data-task-time="<%- task.time %>" 
+							data-task-high-priority="<%- task.high_priority %>" data-task-content="<%= task.content %>">
+								<a class="task_title" data-toggle="modal" data-target="#task_<%- task.id %>_detail"><%= task.title %></a>
+								<p class="task_author">Submitted by <%= task.author %> (<span class="task_timeago"></span>)</p>
+							</div>
+						<% end %>
+					</div>
+				</div>
+				<a href="/add_task/<%- @room_id %>" id="add_task" class="btn btn-primary" type="submit">Add a new directive</a>
+			</div>
+			<div id="messaging_content">
+				<div id="messages">
+					<% for message in @message_list : %>
+						<div class="message" data-id="<%- message.id %>" data-msg-time="<%- message.time %>">
+							<strong><%= message.author %>: (<span class="msg_timeago"></span>)</strong>
+							<% if message.reply >= 0 : %>
+								<p>In reply to message <%- message.reply %></p>
+							<% end %>
+							<p><%= message.content %></p>
+						</div>
+					<% end %>
 				</div>
 				<form id="add_message_form"  class="form-inline">
-					<input id="input_message" type="text" placeholder="Hi, {{ nickname }}! Say something…"/>
-					<input id="send_message" class="btn btn-primary" type="submit" value="Send"></input>
+					<div class="input-group">
+						<span class="input-group-addon">Reply to</span>
+						<input id="input_message" type="text" class="form-control" placeholder="Hi, <%- @username %>! Say something…" data-reply-to="" data-whisper-to="">
+					</div>
+					<button id="send_message" class="btn btn-primary" type="submit">Send</button>
 				</form>
 			</div>
-			<div id="sidebar">
-				<div id="sidebar_content">
-					<h4>Chatters</h4>
-					<div id="members">
-					</div>
+		</div>
+		<div id="sidebar">
+			<div id="sidebar_content">
+				<h4>Chatters</h4>
+				<div id="members">
 				</div>
 			</div>
 		</div>
