--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type="text/javascript" src="http://code.jquery.com/jquery.js" charset="utf-8"></script>
-		<script type="text/javascript" src="/client/js/signin.js" charset="utf-8"></script>
-		<script type="text/javascript" src="/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
+		<% include "common_includes.html" %>
 		<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha256.js"></script>
-		<link href='http://fonts.googleapis.com/css?family=Marmelad' rel='stylesheet' type='text/css'></link>
-		<link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"></link>
-		<link rel="stylesheet" type="text/css" href="/client/css/base.css"></link>
+		<script type="text/javascript" src="/client/js/signin.js" charset="utf-8"></script>
 		<link rel="stylesheet" type="text/css" href="/client/css/signin.css"></link>
 		<title id="page_title">Sign-in | Crisis Flow</title>
 		
