--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type="text/javascript" src="http://code.jquery.com/jquery.min.js" charset="utf-8"></script>
-		<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js" charset="utf-8"></script>
-		<script type="text/javascript" src="/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
+		<% include "common_includes.html" %>
 		<script type="text/javascript" src="/client/js/add_task.js" charset="utf-8"></script>
-		<link href='http://fonts.googleapis.com/css?family=Marmelad' rel='stylesheet' type='text/css'></link>
-		<link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"></link>
-		<link rel="stylesheet" type="text/css" href="/client/css/base.css"></link>
 		<link rel="stylesheet" type="text/css" href="/client/css/room.css"></link>
 		<title id="page_title">Add directive | Crisis Flow</title>
 		
