Added file attachment capability for tasks and restructured directories for static files

--- a/client/css/base.css
+++ b/client/css/base.css
@@ -1,5 +1,5 @@
 html {
-	background: url(/client/maplewood.jpg) no-repeat center center fixed;
+	background: url(/assets/maplewood.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
