--- a/client/templates/manage_rooms.html
+++ b/client/templates/manage_rooms.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<% include "common_includes.html" %>
-		<script type="text/javascript" src="/client/js/manage_rooms.js" charset="utf-8"></script>
-		<link rel="stylesheet" type="text/css" href="/client/css/manage_rooms.css"></link>
+		<script type="text/javascript" src="/js/manage_rooms.js" charset="utf-8"></script>
+		<link rel="stylesheet" type="text/css" href="/css/manage_rooms.css"></link>
 		<title id="page_title">Manage Rooms | Crisis Flow</title>
 	</head>
 	<body>
