--- a/client/templates/common_includes.html
+++ b/client/templates/common_includes.html
@@ -2,4 +2,4 @@
 <script type="text/javascript" src="/bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
 <link href='http://fonts.googleapis.com/css?family=Marmelad' rel='stylesheet' type='text/css'></link>
 <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css"></link>
-<link rel="stylesheet" type="text/css" href="/client/css/base.css"></link>
+<link rel="stylesheet" type="text/css" href="/css/base.css"></link>
