--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<% include "common_includes.html" %>
-		<script type="text/javascript" src="/client/js/index.js" charset="utf-8"></script>
-		<link rel="stylesheet" type="text/css" href="/client/css/index.css"></link>
+		<script type="text/javascript" src="/js/index.js" charset="utf-8"></script>
+		<link rel="stylesheet" type="text/css" href="/css/index.css"></link>
 		<title id="page_title">Rooms | Crisis Flow</title>
 	</head>
 	<body>
